--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -5,8 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
-
     <EditText
         android:id="@+id/editTextTextPersonName"
         android:layout_width="match_parent"
@@ -18,11 +16,9 @@
         app:layout_constraintTop_toTopOf="parent"
         android:autofillHints="name" />
 
-
-
-
     <com.google.android.material.button.MaterialButton
         android:id="@+id/randomButton"
+        android:padding="7dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/random_button"
@@ -30,10 +26,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:backgroundTint="@color/turquoise"
-        app:cornerRadius="50dp"
-        app:strokeColor="@color/black"
-        app:strokeWidth="2dp"
+        android:background="@drawable/rounded_background"
+
         />
 
     <com.google.android.material.button.MaterialButton
@@ -42,6 +36,8 @@
         android:layout_marginStart="50dp"
         android:layout_marginTop="20dp"
         android:text="@string/random_joke"
+        android:background="@drawable/rounded_background"
+        android:paddingTop="12dp"
         android:id="@+id/jokeButton"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/randomButton"
@@ -51,8 +47,10 @@
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:text="@string/random_quote"
+        android:background="@drawable/rounded_background"
+        android:paddingBottom="3dp"
         android:layout_marginTop="20dp"
-        android:id="@+id/quoteButton"
+        android:id="@+id/boredButton"
         android:layout_marginEnd="50dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/randomButton"
@@ -63,8 +61,11 @@
         android:layout_height="wrap_content"
         android:id="@+id/exit"
         android:text="@string/exit"
+        android:background="@drawable/rounded_background"
+
         app:layout_constraintTop_toBottomOf="@id/jokeButton"
         app:layout_constraintStart_toEndOf="@id/jokeButton"
-        app:layout_constraintEnd_toStartOf="@id/quoteButton"
+        app:layout_constraintEnd_toStartOf="@id/boredButton"
         android:layout_marginTop="20dp"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
