--- a/app/src/main/res/layout-v28/fragment_menu.xml
+++ b/app/src/main/res/layout-v28/fragment_menu.xml
@@ -4,7 +4,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    style="@style/Theme.Gadalka"
     >
 
     <EditText
@@ -13,11 +12,12 @@
         android:layout_height="50dp"
         android:layout_margin="60dp"
         android:autofillHints="name"
+        android:textColorHint="@color/black"
+        android:outlineSpotShadowColor="@color/black"
+        android:outlineAmbientShadowColor="@color/black"
         android:hint="@string/enter_name"
         android:inputType="textPersonName"
-        android:textColorHint="@color/black"
-        android:backgroundTint="@color/black"
-        android:textColor="@color/black"
+
         app:layout_constraintBottom_toBottomOf="@id/randomButton"
         app:layout_constraintTop_toTopOf="parent"
         />
@@ -33,7 +33,6 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:background="@drawable/rounded_background"
-        style="@style/Gadalka.MaterialButton"
 
         />
 
@@ -41,13 +40,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="20dp"
         android:text="@string/random_joke"
         android:background="@drawable/rounded_background"
+        android:paddingTop="12dp"
         android:id="@+id/jokeButton"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/randomButton"
-        style="@style/Gadalka.MaterialButton"
         />
 
     <com.google.android.material.button.MaterialButton
@@ -55,12 +54,12 @@
         android:layout_width="wrap_content"
         android:text="@string/random_quote"
         android:background="@drawable/rounded_background"
-        android:layout_marginTop="40dp"
+        android:paddingBottom="3dp"
+        android:layout_marginTop="20dp"
         android:id="@+id/boredButton"
         android:layout_marginEnd="50dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/randomButton"
-        style="@style/Gadalka.MaterialButton"
         />
 
     <com.google.android.material.button.MaterialButton
@@ -69,10 +68,10 @@
         android:id="@+id/exit"
         android:text="@string/exit"
         android:background="@drawable/rounded_background"
-        style="@style/Gadalka.MaterialButton"
+
         app:layout_constraintTop_toBottomOf="@id/jokeButton"
         app:layout_constraintStart_toEndOf="@id/jokeButton"
         app:layout_constraintEnd_toStartOf="@id/boredButton"
-        android:layout_marginTop="40dp"/>
+        android:layout_marginTop="20dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
