--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    style="@style/Theme.Gadalka"
+
     >
 
     <EditText
@@ -13,13 +13,13 @@
         android:layout_height="50dp"
         android:layout_margin="60dp"
         android:autofillHints="name"
+        style="@style/Gadalka.EditText"
         android:hint="@string/enter_name"
         android:inputType="textPersonName"
-        android:textColorHint="@color/black"
-        android:backgroundTint="@color/black"
-        android:textColor="@color/black"
+        android:textCursorDrawable="@drawable/text_cursor"
         app:layout_constraintBottom_toBottomOf="@id/randomButton"
         app:layout_constraintTop_toTopOf="parent"
+
         />
 
     <com.google.android.material.button.MaterialButton
