--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,17 +4,34 @@
     <style name="Theme.Gadalka" parent="Theme.MaterialComponents.NoActionBar">
         <!-- Другие настройки темы -->
         <item name="android:windowBackground">@color/white</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textColorPrimary">@color/black</item>
+
 
         <!-- Настройки для кнопок -->
         <item name="materialButtonStyle">@style/Gadalka.MaterialButton</item>
+
+        <!-- Настройки для EditText -->
+<!--        <item name="editTextStyle">@style/Gadalka.EditText</item>-->
     </style>
+
 
     <style name="Gadalka.MaterialButton" parent="Widget.MaterialComponents.Button">
         <item name="backgroundTint">@color/turquoise</item>
         <item name="strokeColor">@color/black</item>
+        <item name="strokeWidth">1dp</item>
         <!-- Другие настройки для кнопок -->
     </style>
 
+    <style name="Gadalka.EditText" >
+        <item name="android:backgroundTint">@color/black</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textColorHint">@color/black</item>
+
+        <!-- Другие настройки для EditText -->
+    </style>
+
+    <style name="Gadalka" />
 
 
 </resources>
