--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -22,28 +22,26 @@
 
         />
 
-    <com.google.android.material.button.MaterialButton
+    <Button
         android:id="@+id/randomButton"
         android:padding="7dp"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
         android:text="@string/random_button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:background="@drawable/rounded_background"
         style="@style/Gadalka.MaterialButton"
 
         />
 
-    <com.google.android.material.button.MaterialButton
+    <Button
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
         android:layout_marginStart="50dp"
         android:layout_marginTop="40dp"
         android:text="@string/random_joke"
-        android:background="@drawable/rounded_background"
         android:id="@+id/jokeButton"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/randomButton"
@@ -51,10 +49,9 @@
         />
 
     <com.google.android.material.button.MaterialButton
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
         android:layout_width="wrap_content"
         android:text="@string/random_quote"
-        android:background="@drawable/rounded_background"
         android:layout_marginTop="40dp"
         android:id="@+id/boredButton"
         android:layout_marginEnd="50dp"
@@ -65,10 +62,9 @@
 
     <com.google.android.material.button.MaterialButton
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
         android:id="@+id/exit"
         android:text="@string/exit"
-        android:background="@drawable/rounded_background"
         style="@style/Gadalka.MaterialButton"
         app:layout_constraintTop_toBottomOf="@id/jokeButton"
         app:layout_constraintStart_toEndOf="@id/jokeButton"
