--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,5 +16,6 @@
     <color name="input_background_disabled">#E8EDF8</color>
     <color name="edit_text_enabled">#232323</color>
     <color name="edit_text_disabled">#9a9a9a</color>
+    <color name="red">#8B0000</color>
 
 </resources>
