--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -20,6 +20,7 @@
         <item name="backgroundTint">@color/turquoise</item>
         <item name="strokeColor">@color/black</item>
         <item name="strokeWidth">1dp</item>
+        <item name="cornerRadius">30dp</item>
         <!-- Другие настройки для кнопок -->
     </style>
 
